Updated URLs for SEO

--- a/creative-services/brandstrategy.html
+++ b/creative-services/brandstrategy.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Need help developing a brand strategy that will help you stand out from the crowd? Click to learn more about what we can help with. ">
+    content="Need help developing a brand strategy that will help you stand out from the crowd? Click to learn more who-we-are what we can help with. ">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -101,15 +101,15 @@
           Web Development
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../web-development/webdesign.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="../web-development/landingpages.html">Landing Pages</a>
+          <li><a class="dropdown-item" href="../web-development/web-design.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="../web-development/seo-services.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="../web-development/landing-pages.html">Landing Pages</a>
           </li>
-          <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
+          <li><a class="dropdown-item" href="../web-development/website-audit.html">Website Audit</a></li>
         </ul>
       </li>
-      <li class="item"> <a href="../our-previous-work.html" title="My Work">Work</a></li>
-<li class="item"> <a href="../who-we-are.html" title="About">About</a></li>
+      <li class="item"> <a href="../our-previous-work.html" title="Our previous work">Work</a></li>
+<li class="item"> <a href="../who-we-are.html" title="who-we-are">who-we-are</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
 
@@ -128,7 +128,7 @@
       </div>
       <div class="col">
     <p class=" mb-1 bio">
-      Are you starting up a new business? Or are you thinking about refreshing the look of your current business? We can help
+      Are you starting up a new business? Or are you thinking who-we-are refreshing the look of your current business? We can help
       you develop your brand strategy and help you put together a program that will help you stand out as a brand and reach
       your ideal customers. Along the strategy, we can help you create the branding elements that represents you and
       communicates for you by creating the suite of marketing collateral that you need for promoting your business.</br>
@@ -151,7 +151,7 @@
   <li class="bio-list">◼ Signage</li>
   <li class="bio-list">◼ Advertisement design</li>
   <li class="bio-list">◼ Graphic design</li>
-  <li class="bio-list">◼ <a href="../web-development/webdesign.html">Web design</a></li>
+  <li class="bio-list">◼ <a href="../web-development/web-design.html">Web design</a></li>
   <li class="bio-list">◼ Presentation decks and proposal design</li>
 
 </ul>
