--- a/creative-services/logodesign.html
+++ b/creative-services/logodesign.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Are you looking for a new logo or rebrand? Click to learn more about the ways we can help you stand out.">
+    content="Are you looking for a new logo or rebrand? Click to learn more who-we-are the ways we can help you stand out.">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -101,15 +101,15 @@
         Web Development
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="../web-development/webdesign.html">Web Design</a></li>
-        <li><a class="dropdown-item" href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
-        <li><a class="dropdown-item" href="../web-development/landingpages.html">Landing Pages</a>
+        <li><a class="dropdown-item" href="../web-development/web-design.html">Web Design</a></li>
+        <li><a class="dropdown-item" href="../web-development/seo-services.html">Search Engine Optimisation (SEO)</a></li>
+        <li><a class="dropdown-item" href="../web-development/landing-pages.html">Landing Pages</a>
         </li>
-        <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
+        <li><a class="dropdown-item" href="../web-development/website-audit.html">Website Audit</a></li>
       </ul>
     </li>
-    <li class="item"> <a href="../our-previous-work.html" title="My Work">Work</a></li>
-    <li class="item"> <a href="../who-we-are.html" title="About">About</a></li>
+    <li class="item"> <a href="../our-previous-work.html" title="Our previous work">Work</a></li>
+    <li class="item"> <a href="../who-we-are.html" title="who-we-are">who-we-are</a></li>
     <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
     <li class="toggle"> <span class="bars"></span></li>
 
