--- a/digital-marketing/emailmarketing.html
+++ b/digital-marketing/emailmarketing.html
@@ -101,15 +101,15 @@
           Web Development
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../web-development/webdesign.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="../web-development/landingpages.html">Landing Pages</a>
+          <li><a class="dropdown-item" href="../web-development/web-design.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="../web-development/seo-services.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="../web-development/landing-pages.html">Landing Pages</a>
           </li>
-          <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
+          <li><a class="dropdown-item" href="../web-development/website-audit.html">Website Audit</a></li>
         </ul>
       </li>
-      <li class="item"> <a href="../our-previous-work.html" title="My Work">Work</a></li>
-      <li class="item"> <a href="../who-we-are.html" title="About">About</a></li>
+      <li class="item"> <a href="../our-previous-work.html" title="Our previous work">Work</a></li>
+      <li class="item"> <a href="../who-we-are.html" title="who-we-are">who-we-are</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
   
@@ -129,7 +129,7 @@
       </div>
       <div class="col ">
         <p class=" mb-1 bio">Email marketing leverages the contact details of your existing customers, or prospects that have signed up on your
-        <a href="../web-development/webdesign.html">website</a> or <a href="../web-development/landingpages.html">landing page</a>, to promote your products or services. It is often used to build a community around your brand.
+        <a href="../web-development/web-design.html">website</a> or <a href="../web-development/landing-pages.html">landing page</a>, to promote your products or services. It is often used to build a community around your brand.
          This part of your customer journey and allows you to stay front of mind with your customers via email without being overly
         intrusive. As a marketing agency, we can help you define the appropriate frequency of emails and content to share. Our
         goal is to bring your prospect back to your website to place an order or get in touch with you to purchase your
@@ -143,7 +143,7 @@
         </p>
         <p class=" mb-1">
         <ul>
-          <li class="bio-list">◼ <a href="../web-development/landingpages.html">Landing pages to build your email list</a></li>
+          <li class="bio-list">◼ <a href="../web-development/landing-pages.html">Landing pages to build your email list</a></li>
           <li class="bio-list">◼ Email campaign marketing</li>
           <li class="bio-list">◼ Newsletter creation</li>
           <li class="bio-list">◼ Email advertisement and design</li>
