--- a/digital-marketing/websitemarketing.html
+++ b/digital-marketing/websitemarketing.html
@@ -101,15 +101,15 @@
         Web Development
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="../web-development/webdesign.html">Web Design</a></li>
-        <li><a class="dropdown-item" href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
-        <li><a class="dropdown-item" href="../web-development/landingpages.html">Landing Pages</a>
+        <li><a class="dropdown-item" href="../web-development/web-design.html">Web Design</a></li>
+        <li><a class="dropdown-item" href="../web-development/seo-services.html">Search Engine Optimisation (SEO)</a></li>
+        <li><a class="dropdown-item" href="../web-development/landing-pages.html">Landing Pages</a>
         </li>
-        <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
+        <li><a class="dropdown-item" href="../web-development/website-audit.html">Website Audit</a></li>
       </ul>
     </li>
-    <li class="item"> <a href="../our-previous-work.html" title="My Work">Work</a></li>
-    <li class="item"> <a href="../who-we-are.html" title="About">About</a></li>
+    <li class="item"> <a href="../our-previous-work.html" title="Our previous work">Work</a></li>
+    <li class="item"> <a href="../who-we-are.html" title="who-we-are">who-we-are</a></li>
     <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
     <li class="toggle"> <span class="bars"></span></li>
 
@@ -129,7 +129,7 @@
           With website marketing, you are leveraging your website as a tool, to promote your products or services online. For that
           we carry out website design optimisation by looking at the ease of usability of the website, the quality of the content
           and the clarity of the information displayed to the visitors. By optimising your images, making your website more
-          accessible and creating interesting content for your potential customer, you will in time increase your ranking on <a href="../web-development/seo.html">search engines</a> and increase your traffic. The more on target traffic your website receives the higher the potential of sales
+          accessible and creating interesting content for your potential customer, you will in time increase your ranking on <a href="../web-development/seo-services.html">search engines</a> and increase your traffic. The more on target traffic your website receives the higher the potential of sales
           conversion.
           We can optimise your website to help you get in front of your <a href="digitalstrategy.html">target audience</a>.          </br>
           We can help you with:
@@ -137,8 +137,8 @@
         <p class=" mb-1">
         <ul>
           <li class="bio-list">◼ Google analytics</li>
-          <li class="bio-list">◼ <a href="../web-development/seo.html">Search engine optimisation (SEO)</a></li>
-          <li class="bio-list">◼ <a href="../web-development/websiteaudit.html">Website audit for optimisation</a></li>
+          <li class="bio-list">◼ <a href="../web-development/seo-services.html">Search engine optimisation (SEO)</a></li>
+          <li class="bio-list">◼ <a href="../web-development/website-audit.html">Website audit for optimisation</a></li>
           <li class="bio-list">◼ <a href="digitalstrategy.html">Web funnel design to boost digital conversion rate</a></li>
           <li class="bio-list">◼ A/B testing</li>
           <li class="bio-list">◼ Content and keyword review</li>
