--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Digital & Creative Media Agency | Christchurch NZ-Creafix Design</title>
   <meta charset="UTF-8" />
-  <meta name="description" content="Digital and Creative Media agency based in Christchurch, NZ. Learn more about how we can help you make the most of your digital presence." >
+  <meta name="description" content="Digital and Creative Media agency based in Christchurch, NZ. Learn more who-we-are how we can help you make the most of your digital presence." >
 <link rel="icon" href="images/Icon small-min.png">
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   
@@ -61,7 +61,7 @@
   <ul class="menu" id="navbar">
     <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
           alt="creafix design logo" width="150" /></a></li>
-    <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
+    <li class="item"> <a href="../index.html" title="Homepage">Home</a></li>
 
     <li class="nav-item dropdown item">
       <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -69,11 +69,11 @@
         Creative Services
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../creative-services/brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/marketingcollateral.html">Marketing Material and
+        <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing Material and
             Graphic Design</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/templates.html">Presentation and Proposal Templates</a>
+        <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and Proposal Templates</a>
         </li>
       </ul>
     </li>
@@ -83,12 +83,12 @@
         Digital Marketing
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+        <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
         </li>
-        <li><a class="dropdown-item" href="./../digital-marketing/smmanagement.html">Social Media Management</a></li>
-        <li><a class="dropdown-item" href="./../digital-marketing/websitemarketing.html">Website Marketing</a>
+        <li><a class="dropdown-item" href="../digital-marketing/smmanagement.html">Social Media Management</a></li>
+        <li><a class="dropdown-item" href="../digital-marketing/websitemarketing.html">Website Marketing</a>
         </li>
-        <li><a class="dropdown-item" href="./../digital-marketing/emailmarketing.html">Email Marketing</a></li>
+        <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
       </ul>
     </li>
     <li class="nav-item dropdown item">
@@ -97,15 +97,15 @@
         Web Development
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../web-development/webdesign.html">Web Design</a></li>
-        <li><a class="dropdown-item" href="./../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
-        <li><a class="dropdown-item" href="./../web-development/landingpages.html">Landing Pages</a>
+        <li><a class="dropdown-item" href="../web-development/web-design.html">Web Design</a></li>
+        <li><a class="dropdown-item" href="../web-development/seo-services.html">Search Engine Optimisation (SEO)</a></li>
+        <li><a class="dropdown-item" href="../web-development/landing-pages.html">Landing Pages</a>
         </li>
-        <li><a class="dropdown-item" href="./../web-development/websiteaudit.html">Website Audit</a></li>
+        <li><a class="dropdown-item" href="../web-development/website-audit.html">Website Audit</a></li>
       </ul>
     </li>
-    <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
-    <li class="item"> <a href="./../about.html" title="About">About</a></li>
+    <li class="item"> <a href="../our-previous-work.html" title="Our previous work">Work</a></li>
+    <li class="item"> <a href="../who-we-are.html" title="who-we-are">who-we-are</a></li>
     <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
     <li class="toggle"> <span class="bars"></span></li>
 
@@ -148,34 +148,34 @@
 <div class="title" > <h2 class="title">What we do</h2></div>
 <div class="container intro-services">
   <div class="row">
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/logodesign.html"><img src="./../images/Creativeicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/logodesign.html"><img src="../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
     <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/logodesign.html">Logo creation</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/marketingcollateral.html"><img src="./../images/Creativeicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/marketingcollateral.html"><img src="../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
     <div class="col-lg-2 col-md-2 col-4"> <a href="/creative-services/marketingcollateral.html">Marketing Collateral</a></div>
     <div class="w-100 d-md-none"></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/digitalstrategy.html"><img src="./../images/DMicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/digitalstrategy.html"><img src="../images/DMicon.png"
           alt="Digital marketing services phone icon" class="service-icon" /></a></div>
     <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/seo.html"><img src="./../images/WebDevicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/seo-services.html"><img src="../images/WebDevicon.png"
           alt="Web services screen icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/seo.html">Search Engine Optimisation</a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/seo-services.html">Search Engine Optimisation</a></div>
   </div>
   <div class="row">
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/brandstrategy.html"><img src="./../images/Creativeicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/brandstrategy.html"><img src="../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
     <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/brandstrategy.html">Brand strategy</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/templates.html"><img src="./../images/Creativeicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/templates.html"><img src="../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
     <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/templates.html">Presentation and Proposal</a></div>
     <div class="w-100 d-md-none"></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/webdesign.html"><img src="./../images/WebDevicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/web-design.html"><img src="../images/WebDevicon.png"
           alt="Web services screen icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/webdesign.html">Web Design & Development</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/websiteaudit.html"><img src="./../images/WebDevicon.png"
+    <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/web-design.html">Web Design & Development</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/website-audit.html"><img src="../images/WebDevicon.png"
           alt="Web services screen icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/websiteaudit.html">Website Performance Audit</a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/website-audit.html">Website Performance Audit</a></div>
   </div>
 </div>
 <div class="top-line-title" id="work"></div>
@@ -185,7 +185,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-4 col-xs-12">
-      <img src="./images/Mascot who am I.PNG" alt="Creafix Mascot who am I" class="img-fluid mx-auto d-block mascot">
+      <img src="images/Mascot%20who%20am%20I.PNG" alt="Creafix Mascot who am I" class="img-fluid mx-auto d-block mascot">
     </div>
     <div class="col-lg-7 col-xs-12">
       <p class="bio">
@@ -199,7 +199,7 @@
 
        </p>
       <div class="contact-button">
-        <a href="about.html" class="contact-link" title="Learn more about me">Learn more about us</a>
+        <a href="who-we-are.html" class="contact-link" title="Learn more who-we-are me">Learn more who-we-are us</a>
       </div>
            </div>
        
@@ -212,7 +212,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-4 col-xs-12 ">
-      <img src="./images/Mascot work with me.png" alt="Creafix Mascot why work with me?" class="img-fluid mx-auto d-block mascot">
+      <img src="images/Mascot%20work%20with%20me.png" alt="Creafix Mascot why work with me?" class="img-fluid mx-auto d-block mascot">
     </div>
     <div class="col-lg-7 col-xs-12">
       <p class="bio">Whether you've been in business for 2 or 20 years, you need visual communication and strategy that will make you reach
@@ -297,7 +297,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-4 col-xs-12">
-<img src="./images/Mascot lets talk.PNG" alt="Creafix Mascot let's talk" class="img-fluid mx-auto d-block mascot">
+<img src="images/Mascot%20lets%20talk.PNG" alt="Creafix Mascot let's talk" class="img-fluid mx-auto d-block mascot">
 </div>
 
 <div class="col-lg-8 col-xs-12">
@@ -364,7 +364,7 @@
   <div class="container">
     <div class="row">
       <div class="col-2 logofooter">
-        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        <div class="d-none d-md-block"><img src="../images/Icon%20small-min.png" alt="Creafix Design icon" class="">
         </div>
       </div>
       <div class="col-md-auto email-footer">
@@ -376,8 +376,8 @@
 
   </div>
   <div id="terms">
-    © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of Use</a>
+    © 2022 by Creafix Design All Rights Reserved. | <a href="privacypolicy.html">Privacy Policy</a> | <a
+      href="websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
