--- a/web-development/website-audit.html
+++ b/web-development/website-audit.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Marketing Material & Graphics | Christchurch NZ-Creafix Design</title>
+  <title>Website audit & performance checker| Christchurch NZ-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Did you know we help businesses like yours create brochures and graphics that promotes your business? Click to learn more who-we-are how we can help.">
+    content="Not sure if your website is performing as it should? Let us carry out an audit and create a checklist of potential improvements; click to learn more.">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -73,11 +73,11 @@
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="marketingcollateral.html">Marketing Material and
+          <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing Material and
               Graphic Design</a></li>
-          <li><a class="dropdown-item" href="templates.html">Presentation and Proposal Templates</a>
+          <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and Proposal Templates</a>
           </li>
         </ul>
       </li>
@@ -101,11 +101,11 @@
           Web Development
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../web-development/web-design.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="../web-development/seo-services.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="../web-development/landing-pages.html">Landing Pages</a>
+          <li><a class="dropdown-item" href="web-design.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="seo-services.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="landing-pages.html">Landing Pages</a>
           </li>
-          <li><a class="dropdown-item" href="../web-development/website-audit.html">Website Audit</a></li>
+          <li><a class="dropdown-item" href="website-audit.html">Website Audit</a></li>
         </ul>
       </li>
       <li class="item"> <a href="../our-previous-work.html" title="Our previous work">Work</a></li>
@@ -118,45 +118,36 @@
   </nav>
 
   <div class="title">
-    <h1 class="title">Marketing material and graphic design</h1>
+    <h1 class="title">Website performance audit</h1>
   </div>
   <div class="container">
     <div class="row">
       <div class="col mb-3 align-self-center">
-        <img src="../images/mockup.png" alt="sample colour palettes for selection" class="service-image">
+        <img src="../images/webaudit.png" alt="Graph presented on dashboard showing website parameters"
+          class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1 bio">Well-crafted marketing material can help you catch the attention of your potential customers. This material can vary
-        largely depending on your marketing objectives; it could be a simple effective advertising flyer to a complete product
-        advertising catalogue.
-        It is important to know who your audience is before creating advertising material. We can help you put together a <a href="brandstrategy.html">branding</a> and <a href="../digital-marketing/digitalstrategy.html">marketing strategy</a> that will make sure
-        that each piece is targeting the right customers. To help convince your customers to buy your product, we can help you
-        build trust by creating with you the marketing collateral that will set you as an authority in your industry.
-          
+        <p class=" mb-1 bio">
+          Carrying out a performance test on your website allows you to identify elements such as loading speed, page
+          accessibility and mobile friendliness that might impair the performance and/or user experience. This is what we use to
+          optimise the marketing ability of a web page as it helps us identify the areas of the website that needs tweaking to
+          increase your engagement and overall <a href="seo-services.html">SEO ranking</a>.
+                
+
           </br>
           We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
-          <li class="bio-list">◼ <a href="brandstrategy.html">Identify your target customers</a></li>
-          <li class="bio-list">◼ <a href="brandstrategy.html">Research and build customer persona</a></li>
-          <li class="bio-list">◼ Brochure design</li>
-          <li class="bio-list">◼ Product catalogue design</li>
-          <li class="bio-list">◼ Postcards and thank you cards</li>
-          <li class="bio-list">◼ Flyer design</li>
-          <li class="bio-list">◼ Poster design</li>
-          <li class="bio-list">◼ Infographic design</li>
-          <li class="bio-list">◼ Graphic design</li>
-          <li class="bio-list">◼ Print and digital advertisement</li>
-          <li class="bio-list">◼ Social media advertisement</li>
-          <li class="bio-list">◼ Banner design</li>
-          <li class="bio-list">◼ Expo booth design</li>
-          <li class="bio-list">◼ Sign and flag design</li>
-          <li class="bio-list">◼ Apparel and uniform branding</li>
-          <li class="bio-list">◼ Newsletter and blog posts template</li>
-          <li class="bio-list">◼ <a href="templates.html">Case studies template</a></li>
-          <li class="bio-list">◼ Testimonial and video explainer script and design</li>
-          <li class="bio-list">◼ <a href="../web-development/landing-pages.html">Landing page design</a></li>
+          <li class="bio-list">◼ Complete website audit</li>
+          <li class="bio-list">◼ Google analytics review</li>
+          <li class="bio-list">◼ SEO ranking audit</li>
+          <li class="bio-list">◼ Create a plan to correct the areas of weaknesses</li>
+          <li class="bio-list">◼ <a href="../digital-marketing/websitemarketing.html">Website optimisation</a></li>
+          <li class="bio-list">◼ <a href="seo-services.html">SEO strategy recommendations</a></li>
+          <li class="bio-list">◼ <a href="../digital-marketing/websitemarketing.html">Website usability and accessibility review</a></li>
+
+
         </ul>
 
         </p>
@@ -164,24 +155,24 @@
     </div>
   </div>
 
-<div class="container creative-services">
-  <div class="row">
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/logodesign.html"><img
-          src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/logodesign.html">Logo creation</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/marketingcollateral.html"><img
-          src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"> <a href="/creative-services/marketingcollateral.html">Marketing Collateral</a>
+  <div class="container creative-services">
+    <div class="row">
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/web-design.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/web-design.html">Web design & development</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/seo-services.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/web-development/seo-services.html">Search Engine Optimisation (SEO)</a></div>
+      <div class="w-100 d-md-none"></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/landing-pages.html"><img
+            src="../images/WebDevicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/landing-pages.html">Landing pages</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/website-audit.html"><img
+            src="../images/WebDevicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/website-audit.html">Website performance audit</a>
+      </div>
     </div>
-    <div class="w-100 d-md-none"></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/brandstrategy.html"><img
-          src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/brandstrategy.html">Brand strategy</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/templates.html"><img
-          src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/templates.html">Presentation and Proposal</a></div>
   </div>
-</div>
 
 
 </body>
