--- a/digital-marketing/digitalstrategy.html
+++ b/digital-marketing/digitalstrategy.html
@@ -101,15 +101,15 @@
         Web Development
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="../web-development/webdesign.html">Web Design</a></li>
-        <li><a class="dropdown-item" href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
-        <li><a class="dropdown-item" href="../web-development/landingpages.html">Landing Pages</a>
+        <li><a class="dropdown-item" href="../web-development/web-design.html">Web Design</a></li>
+        <li><a class="dropdown-item" href="../web-development/seo-services.html">Search Engine Optimisation (SEO)</a></li>
+        <li><a class="dropdown-item" href="../web-development/landing-pages.html">Landing Pages</a>
         </li>
-        <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
+        <li><a class="dropdown-item" href="../web-development/website-audit.html">Website Audit</a></li>
       </ul>
     </li>
-    <li class="item"> <a href="../our-previous-work.html" title="My Work">Work</a></li>
-    <li class="item"> <a href="../who-we-are.html" title="About">About</a></li>
+    <li class="item"> <a href="../our-previous-work.html" title="Our previous work">Work</a></li>
+    <li class="item"> <a href="../who-we-are.html" title="who-we-are">who-we-are</a></li>
     <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
     <li class="toggle"> <span class="bars"></span></li>
 
@@ -142,7 +142,7 @@
           <li class="bio-list">◼ Identify the best suitable marketing/advertising channels</li>
           <li class="bio-list">◼ Digital marketing assessment</li>
           <li class="bio-list">◼ <a href="../creative-services/brandstrategy.html">Buyer persona creation</a></li>
-          <li class="bio-list">◼ <a href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
+          <li class="bio-list">◼ <a href="../web-development/seo-services.html">Search Engine Optimisation (SEO)</a></li>
           <li class="bio-list">◼ <a href="smmanagement.html">Social Media Marketing (SMM)</a></li>
           <li class="bio-list">◼ Build up your emails list</li>
           <li class="bio-list">◼ Lead magnet creation</li>
@@ -151,7 +151,7 @@
           <li class="bio-list">◼ Overall conversion rate optimisation</li>
           <li class="bio-list">◼ Digital advertising</li>
           <li class="bio-list">◼ Content Marketing</li>
-          <li class="bio-list">◼ <a href="../web-development/landingpages.html">Website marketing and landing pages</a></li>
+          <li class="bio-list">◼ <a href="../web-development/landing-pages.html">Website marketing and landing pages</a></li>
           <li class="bio-list">◼ <a href="emailmarketing.html">Email Marketing</a></li>
           <li class="bio-list">◼ Downloadable content</li>
         </ul>
