--- a/digital-marketing/smmanagement.html
+++ b/digital-marketing/smmanagement.html
@@ -101,15 +101,15 @@
           Web Development
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../web-development/webdesign.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="../web-development/landingpages.html">Landing Pages</a>
+          <li><a class="dropdown-item" href="../web-development/web-design.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="../web-development/seo-services.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="../web-development/landing-pages.html">Landing Pages</a>
           </li>
-          <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
+          <li><a class="dropdown-item" href="../web-development/website-audit.html">Website Audit</a></li>
         </ul>
       </li>
-      <li class="item"> <a href="../our-previous-work.html" title="My Work">Work</a></li>
-      <li class="item"> <a href="../who-we-are.html" title="About">About</a></li>
+      <li class="item"> <a href="../our-previous-work.html" title="Our previous work">Work</a></li>
+      <li class="item"> <a href="../who-we-are.html" title="who-we-are">who-we-are</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
   
