--- a/web-development/landing-pages.html
+++ b/web-development/landing-pages.html
@@ -101,11 +101,11 @@
         Web Development
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="web-design.html">Web Design</a></li>
-        <li><a class="dropdown-item" href="seo-services.html">Search Engine Optimisation (SEO)</a></li>
+        <li><a class="dropdown-item" href="web-design-christchurch-christchurch.html">Web Design</a></li>
+        <li><a class="dropdown-item" href="seo-services-christchurch.html">Search Engine Optimisation (SEO)</a></li>
         <li><a class="dropdown-item" href="landing-pages.html">Landing Pages</a>
         </li>
-        <li><a class="dropdown-item" href="website-audit.html">Website Audit</a></li>
+        <li><a class="dropdown-item" href="website-audit-checker-nz.html">Website Audit</a></li>
       </ul>
     </li>
     <li class="item"> <a href="../our-previous-work.html" title="Our previous Work">Work</a></li>
@@ -156,19 +156,19 @@
 
   <div class="container creative-services">
     <div class="row">
-      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/web-design.html"><img src="../images/WebDevicon.png"
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/web-design-christchurch.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/web-design.html">Web design & development</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/seo-services.html"><img src="../images/WebDevicon.png"
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/web-design-christchurch.html">Web design & development</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/seo-services-christchurch.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"> <a href="/web-development/seo-services.html">Search Engine Optimisation (SEO)</a></div>
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/web-development/seo-services-christchurch.html">Search Engine Optimisation (SEO)</a></div>
       <div class="w-100 d-md-none"></div>
       <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/landing-pages.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
       <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/landing-pages.html">Landing pages</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/website-audit.html"><img src="../images/WebDevicon.png"
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/website-audit-checker-nz.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/website-audit.html">Website performance audit</a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/website-audit-checker-nz.html">Website performance audit</a></div>
     </div>
   </div>
 
