fixed link error

--- a/web-development/website-audit-checker-nz.html
+++ b/web-development/website-audit-checker-nz.html
@@ -101,7 +101,7 @@
           Web Development
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="web-design-christchurch-christchurch.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="web-design-christchurch.html">Web Design</a></li>
           <li><a class="dropdown-item" href="seo-services-christchurch.html">Search Engine Optimisation (SEO)</a></li>
           <li><a class="dropdown-item" href="landing-pages.html">Landing Pages</a>
           </li>
